--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ readme = "README.md"
 keywords = ["activitystreams", "activitypub"]
 
 [dependencies]
-activitystreams-derive = "0.1"
-activitystreams-traits = "0.1"
-activitystreams-types = "0.2"
+activitystreams-derive = { version = "0.1", git = "https://git.asonix.cloud/asonix/activitystreams.git" }
+activitystreams-traits = { version = "0.1", git = "https://git.asonix.cloud/asonix/activitystreams.git" }
+activitystreams-types = { version = "0.2", git = "https://git.asonix.cloud/asonix/activitystreams.git" }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
